src/test/deca/syntax/valid/cast_bool.deca
// Description :
// Cast explicite boolean 
// Devrait marcher pour l'étape syntaxique
//
// Resultats :
// ok

{
    boolean b;
    b = (boolean)(1 > 0);
}