src/test/deca/syntax/invalid/invalid_while.deca
// Description :
//    while incomplete
//
// Resultats :
//    Erreur syntaxique
//    Ligne 8 : no viable alternative at input 'while'

while () {
    int x = 0;
}
